compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__custom_types__zero_arity_imported.snap
---
source: compiler-core/src/javascript/tests/custom_types.rs
expression: "import other\npub fn main() {\n  other.Two\n}"
---
----- SOURCE CODE
-- other.gleam
pub type One { Two }

-- main.gleam
import other
pub fn main() {
  other.Two
}

----- COMPILED JAVASCRIPT
import * as $other from "../other.mjs";

export function main() {
  return $other.One$Two$const;
}
