compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__custom_types__zero_arity_imported_unqualified.snap
---
source: compiler-core/src/javascript/tests/custom_types.rs
expression: "import other.{Two}\npub fn main() {\n  Two\n}"
---
----- SOURCE CODE
-- other.gleam
pub type One { Two }

-- main.gleam
import other.{Two}
pub fn main() {
  Two
}

----- COMPILED JAVASCRIPT
import * as $other from "../other.mjs";
import { One$Two$const } from "../other.mjs";

export function main() {
  return One$Two$const;
}
