compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__custom_types__zero_arity_imported_unqualified_aliased.snap
---
source: compiler-core/src/javascript/tests/custom_types.rs
expression: "import other.{Two as Three}\npub fn main() {\n  Three\n}"
---
----- SOURCE CODE
-- other.gleam
pub type One { Two }

-- main.gleam
import other.{Two as Three}
pub fn main() {
  Three
}

----- COMPILED JAVASCRIPT
import * as $other from "../other.mjs";
import { One$Two$const as One$Three$const } from "../other.mjs";

export function main() {
  return One$Three$const;
}
